# codif-ape-llm-synthetic-data

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
src/: utils.py
src/config/: __init__.py  setup.py
src/output_models/: __init__.py  models.py
src/prompts/: __init__.py  bias_type_instructions.py
src/request_API/: __init__.py  requestAPI.py
