[project]
name = "codif-ape-llm-synthetic-data"
version = "0.1.0"
description = "Testing the robustness of the NACE automatic coding ML model at Insee using LLM-generated synthetic data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "langfuse>=3.0.2",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "s3fs>=2025.5.1",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
